# newsletter-axum

./: Cargo.toml  Dockerfile  README.md
.sqlx/: query-7232ca4e3c45fb3739649570d17ffb6f9efbc2edff8694aa67f4e292598bfb26.json  query-7b0960ebf863981b0c27e1a2db2d8e00dbb8fcfbfb911b8bb0f50c3edb644706.json
configuration/: base.yaml  local.yaml
migrations/: 20241026141404_create_subscriptions_table.sql  20241110192357_make_status_not_null_in_subscriptions.sql  20241110193157_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: app_state.rs  configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  ses_workflow.rs  startup.rs  state.rs  telemetry.rs
src/config/: configuration.rs
src/configuration/: aws_credentials.rs  config.rs  mod.rs
src/database/: db.rs
src/db/: database.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  newsletter.rs  router.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs  subscriptions.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
tests/common/: mod.rs
