[package]
name = "newslatter"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newslatter"

[dependencies]
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-aux = "4"
tokio = { version = "1.0", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
http-body-util = "0.1.0"
hyper-util = { version = "0.1", features = ["client", "http1", "client-legacy"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
config = "0.14"
uuid = {version = "1.11.0", features = ["v4", "fast-rng", "macro-diagnostics"]}
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
once_cell = "1"
secrecy = { version = "0.10.3", features = ["serde"] }
unicode-segmentation = "1"
validator = { version = "0.19"}
# reqwest = {version = "0.12", default-features = false, features = ["json", "rustls-tls"]}
aws-config = { version = "1.5.9", features = ["behavior-version-latest"] }
aws-sdk-sesv2 = { version = "1.3.0", features = ["test-util"]}
aws-credential-types = "1.2.1"
aws-smithy-http = "0.60.7"
anyhow = "1.0.92"

[dev-dependencies]
claim = "0.5.0"
fake = "3"
quickcheck = "1"
quickcheck_macros = "1"
rand = "0.8.5"
wiremock = "0.6"
